Update VSCode settings in devcontainer.json to enforce tab size and indentation rules

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,7 +5,10 @@
     "vscode": {
       "settings": {
         "files.trimTrailingWhitespace": false,
-        "files.insertFinalNewline": true
+        "files.insertFinalNewline": true,
+        "editor.tabSize": 4,
+        "editor.detectIndentation": false,
+        "editor.insertSpaces": false
       },
       "extensions": [
         "ms-vscode.cpptools",                   // C/C++ extension
