--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,11 +13,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: configure
-      run: ./configure
-    - name: make
+	
+	# Install dependencies
+    - name: Install dependencies
+      run:  sudo apt-get update && sudo apt-get install -y gcc make libcritirion-dev
+	
+	  # Build
+    - name: Build project
       run: make
-    - name: make check
-      run: make check
-    - name: make distcheck
-      run: make distcheck
+
+	# Test
+    - name: Run tests
+      run: make test
