--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/checkout@v4
     # Install dependencies
     - name: Install dependencies
-      run:  sudo apt-get update && sudo apt-get install -y gcc make libcritirion-dev
+      run:  sudo apt-get update && sudo apt-get install -y gcc make libcriterion-dev
     # Build
     - name: Build project
       run: make
