Add coverage and test runner files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,12 @@ dkms.conf
 
 # .DS_store files
 .DS_store
+
+# coverage files
+coverage.html
+coverage.xml
+*.gcda
+*.gcno
+
+# test runner
+test_runner
